// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: inline-block;
  transition: color .3s;
  margin-bottom: 16px;
  color: #FFFFFF;
  font-size: 40px;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c12:hover,
.c12:focus {
  background: #222C59;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 4px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
  text-align: center;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c11 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
  height: 16px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  width: 80%;
  background-color: black;
  border-radius: 12px;
}

.c8 > span {
  border-radius: 12px;
  height: 100%;
  width: 100%;
  transition: 1s width;
}

.c9 {
  text-align: center;
  margin: 0;
  padding: 0;
  display: block;
  height: 100%;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  background-color: #b097ff;
  box-shadow: inset 0 2px 9px rgba(255,255,255,0.3), inset 0 -2px 6px rgba(0,0,0,0.4);
  position: relative;
  overflow: hidden;
  width: 118px;
}

.c9::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-image: linear-gradient( -45deg, rgba(255,255,255,0.2) 25%, transparent 25%, transparent 50%, rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.2) 75%, transparent 75%, transparent );
  z-index: 1;
  background-size: 50px 50px;
  animation: move 2s linear infinite;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  overflow: hidden;
  animation: animate 3s linear infinite;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="sc-AxirZ sc-fzqBZW c4"
      >
        <span
          class="c5 icon icon-shield-check "
          color="light"
          font-size="40"
        />
        <div
          class="c6"
        >
          Your account is being authorized
        </div>
        <div
          class="c7"
        >
          Please wait while an administrator authorizes your account.
        </div>
        <div
          class="sc-AxirZ sc-fzqBZW c8"
          height="16px"
          value="100"
        >
          <span
            class="c9"
          />
        </div>
        <div
          class="c10"
        >
          One moment...
        </div>
      </div>
      <div
        class="sc-AxirZ c11"
      >
        <a
          class="c12 c13"
          kind="primary"
        >
          Logout of Account
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded failed 1`] = `
.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  margin-bottom: 16px;
  background: #f50057;
  color: #FFFFFF;
}

.c8 a {
  color: #FFFFFF;
}

.c7 {
  box-sizing: border-box;
  margin-top: 16px;
  width: 100%;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: inline-block;
  transition: color .3s;
  margin-bottom: 16px;
  color: #FFFFFF;
  font-size: 40px;
}

.c10 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c10:hover,
.c10:focus {
  background: #222C59;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 4px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
  text-align: center;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.c12 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="sc-fzqBZW c4"
      >
        <span
          class="c5 icon icon-shield-check "
          color="light"
          font-size="40"
        />
        <div
          class="c6"
        >
          Your account is being authorized
        </div>
        <div
          class="c7"
          width="100%"
        >
          <div
            class="c8"
            kind="danger"
          >
            some error message
          </div>
          <div
            class="c9"
          >
            An error has occured.
             
            <a
              class="c10 c11"
              kind="primary"
            >
              Please Try Again
            </a>
          </div>
        </div>
      </div>
      <div
        class="c12"
      >
        <a
          class="c10 c11"
          kind="primary"
        >
          Logout of Account
        </a>
      </div>
    </div>
  </div>
</div>
`;
